k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'goserver'
  labels:
    app: 'goserver'
spec:
  selector:
    matchLabels:
      app: 'goserver'
  replicas: 1
  template:
    metadata:
      labels:
        app: 'goserver'
    spec:
      containers:
        - name: 'goserver'
          image: 'costabeto/hello-go:v7'

          resources:
            requests:
              cpu: '0.05'
              memory: 20Mi
            limits:
              cpu: '0.05'
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 10
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15

          volumeMounts:
            - mountPath: '/go/myfamily'
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: 'family.txt'
