k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
    - name: goserver
      port: 80
      targetPort: 8000
      protocol: TCP
