k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: 'ingress.costabeto.com'
      http:
        paths:
          - pathType: Prefix
            path: '/admin'
            backend:
              serviceName: goserver-service
              servicePort: 80
  tls:
    - hosts:
        - 'ingress.costabeto.com'
      secretName: letsencrypt-tls
